--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1></h1>
     </header>
     <main class="container">
-        <button onclick="botonConsole" class="button">Console</button>
-        <button onclick="" class="button">Alert</button>
-        <button onclick="" class="button">Prompt</button>
+        <button onclick="botonConsole();" class="button">Console</button>
+        <button onclick="botonAlerta();" class="button">Alert</button>
+        <button onclick="botonPrompt();" class="button">Prompt</button>
         <button onclick="" class="button">Suma</button>
     </main>
 
